fix: text alignment in figure captions
While the text should be centered, the generic `p` selector overrides
the bulma rule for .content>figure>caption, so the explicit rule is
needed to get it back.

--- a/assets/root.sass
+++ b/assets/root.sass
@@ -16,6 +16,10 @@ p
   text-align: justify
   font-family: $family-serif
 
+// previous rule overrides the alignment in figures set by bulma, thus catch that again...
+.content figure p
+      text-align: center
+
 .masonry
   +tablet
     height: 2700px
